--- a/client/src/css/_sidebar.scss
+++ b/client/src/css/_sidebar.scss
@@ -150,7 +150,6 @@
   top:34px;
   left:0;
   right:0;
-  bottom:0;
   overflow:scroll;
   padding:20px 27px 20px 27px;
 }
